# xacc-atos

./: CMakeLists.txt  README.md
accelerator/: ATOSAccelerator.cpp  ATOSAccelerator.hpp  ATOSAcceleratorActivator.cpp  CMakeLists.txt  manifest.json
tests/: ATOSAcceleratorTester.cpp  ATOSVisitorTester.cpp  CMakeLists.txt
utils/: ATOSVisitor.hpp  CMakeCache.txt
